tests/ui/solver-attribute/multiple-args/expected
error: The `#[kani::solver]` attribute expects a single argument. Got 2 arguments.
test.rs:5:1
  |
5 | #[kani::solver(kissat, minisat)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: aborting due to previous error
